# cv-prd

./: .gitignore  API_SPEC.md  APP_README.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  BUGS.md  CHANGELOG.md  CODEBASE_OVERVIEW.md  CV_PLATFORM_VISION.md  DOCUMENTATION_REVIEW_SUMMARY.md  DOCUMENT_UPLOAD_GUIDE.md  IMPLEMENTATION_CHECKLIST.md  MIGRATION_NEO4J_TO_FALKORDB.md  PRD_OPTIMIZATION_GUIDE.md  PROGRESS.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_START_OPTIMIZATION.md  README.md  ROADMAP.md  ROADMAP_TO_PRODUCTION.md  SESSION-SUMMARY-2025-12-15.md  SESSION_STATUS.md  SESSION_SUMMARY.md  SETUP.md  START_HERE.md  TODO.md  UPLOAD_FEATURE_SUMMARY.md  USER_GUIDE.md  build-desktop.bat  build-desktop.sh  check-ports.sh  install.sh  optimization_result_20251110_091138.json  package.json  pnpm-lock.yaml  run-demo.sh  run_test.sh  setup.sh  start-app.sh  (+5 more)
.cv/: config.json  delta_state.json  manifest.json  sync_state.json
backend/: .env.example  build_backend.py  cvprd-desktop.spec  cvprd-onefile.spec  cvprd.spec  requirements.txt  run.py  run_server.py  upload_document.py
demo/: demo.py
docs/: CVPRD_INTEGRATION.md  DATA_MODELS.md  FEATURE_REQUEST_DESIGN.md  PLAN-auto-sync-and-design.md  PRD_INTEGRATION_DESIGN.md  RUST_BACKEND_REWRITE.md  STATUS_2025-11-21.md  STORAGE_FORMAT.md
electron/: .gitignore  main.js  package-lock.json  package.json  preload.js
examples/: sample_prd.md
frontend/: index.html  package-lock.json  package.json  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
(+76 files in other folders)
